[package]
name = "ELApse"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/BlackDragon-B/ELApse"
authors = ["BlackDragon-B <kyan@blackdrgn.nl>"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
image = "0.25.2"
piston = "1.0.0"
piston2d-graphics = "0.44.0"
piston_window = "0.132.0"
rand = "0.8.5"
unreal_asset = "0.1.16"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

#[workspace.metadata.dist.github-custom-runners]
#aarch64-unknown-linux-gnu = "buildjet-4vcpu-ubuntu-2204-arm"
#aarch64-unknown-linux-musl = "buildjet-4vcpu-ubuntu-2204-arm"
